# Terminal-N-Body-Sim

./: CMakeLists.txt  README.md  app.h  commands.h  display.h  input_controller.h  main  main.cpp  math_utils.h  parser.cpp  parser.h  renderer.h  simulation.h  utils.h
rendering/: button.h  consts.h  grid.h  renderer.h  utils.h  window_base.h  windows.h
scenarios/: custom_scenario.yaml  two_galaxies.yaml
simulation/: bodies.h  force_computers.h  simulation.h  utils.h
states/: state_base.h  states.h
